# SonicSpintool

./: .gitignore  CMakeLists.txt  Makefile  README.md  SonicSpintool.sln  SpinballSpriteEditor.vcxproj  SpinballSpriteEditor.vcxproj.filters  rom_asset_definitions.cpp  ui_tile_editor.cpp  ui_tile_editor.h
.github/workflows/: build-linux-windows.yml  cmake-multi-platform.yml
cmake/toolchains/: mingw64-linux.cmake
metadata/: metadata.json
redist/: render.h  sdl_handle_defs.h  spinball_rom.h  ui_editor.h  ui_palette.h  ui_palette_viewer.h  ui_sprite.h  ui_sprite_importer.h  ui_sprite_navigator.h  ui_sprite_viewer.h
redist/editor/: editor_brush.h  editor_level.h  editor_project.h  game_obj_manager.h  level.h  spline_manager.h  tile_brush_manager.h  tile_layout_manager.h
redist/rom/: animated_object.h  animation_sequence.h  bonus_stage_decoder.h  boogaloo_decompressor.h  collision_tile.h  colour.h  compressed2_optimizer.h  level.h  lzss_decompressor.h  palette.h  rom_asset_definitions.h  rom_data.h  second_decompressor.h  spinball_animation_timeline.h  spinball_rom.h  sprite.h  sprite_tile.h  ssc_compressor.h  ssc_decompressor.h  tails_plane_decoder.h  tile.h  tile_brush.h  tile_layout.h  tileset.h  title_screen_decoder.h
redist/rom/culling_tables/: animated_object_culling_table.h  game_obj_collision_culling_table.h  spline_culling_table.h
redist/rom/game_objects/: game_object_definition.h  game_object_flipper.h  game_object_ring.h
redist/rom/metadata/: rom_metadata.h
redist/serialisation/: editor_serialiser.h
redist/types/: blit_settings.h  bounding_box.h  decompression_result.h  rom_ptr.h  sdl_handle_defs.h
redist/ui/: ui_animation_navigator.h  ui_editor.h  ui_editor_window.h  ui_file_selector.h  ui_palette.h  ui_palette_viewer.h  ui_sprite.h  ui_sprite_importer.h  ui_sprite_navigator.h  ui_sprite_viewer.h  ui_tile_editor.h  ui_tile_layout_viewer.h  ui_tile_picker.h  ui_tileset_navigator.h
src/: main.cpp  render.cpp  spinball_rom.cpp  ui_editor.cpp  ui_file_selector.cpp  ui_palette.cpp  ui_palette_viewer.cpp  ui_sprite.cpp  ui_sprite_importer.cpp  ui_sprite_navigator.cpp  ui_sprite_viewer.cpp
src/editor/: editor_brush.cpp  editor_level.cpp  editor_project.cpp  game_obj_manager.cpp  level.cpp  spline_manager.cpp  tile_brush_manager.cpp  tile_layout_manager.cpp
src/project/: editor_project.cpp
src/rom/: animated_object.cpp  animation_sequence.cpp  bonus_stage_decoder.cpp  boogaloo_decompressor.cpp  collision_tile.cpp  colour.cpp  compressed2_optimizer.cpp  level.cpp  lzss_decompressor.cpp  palette.cpp  rom_asset_definitions.cpp  rom_data.cpp  second_decompressor.cpp  spinball_rom.cpp  sprite.cpp  sprite_tile.cpp  ssc_compressor.cpp  ssc_decompressor.cpp  tails_plane_decoder.cpp  tile.cpp  tile_brush.cpp  tile_layout.cpp  tileset.cpp  title_screen_decoder.cpp
src/rom/culling_tables/: animated_object_culling_table.cpp  game_obj_collision_culling_table.cpp  spline_culling_table.cpp
src/rom/game_objects/: game_object_definition.cpp  game_object_flipper.cpp  game_object_ring.cpp
src/rom/metadata/: rom_metadata.cpp
src/serialisation/: editor_serialiser.cpp
src/types/: blit_settings.cpp  bounding_box.cpp
src/ui/: ui_animation_navigator.cpp  ui_editor.cpp  ui_editor_window.cpp  ui_file_selector.cpp  ui_palette.cpp  ui_palette_viewer.cpp  ui_sprite.cpp  ui_sprite_importer.cpp  ui_sprite_navigator.cpp  ui_sprite_viewer.cpp  ui_tile_editor.cpp  ui_tile_layout_viewer.cpp  ui_tile_picker.cpp  ui_tileset_navigator.cpp
